# WheelProxy

./: CMakeLists.txt  README
apparmor/: apparmor.in
config/: CMakeLists.txt  F1_2017_Thrustmaster_Italia_458_to_Logitech_G920.json  Thrustmaster_Italia_458_to_Logitech_Driving_Force_GT.json
src/: CMakeLists.txt  application.cpp  application.h  axis.cpp  axis.h  button.cpp  button.h  device.cpp  device.h  eventsource.cpp  eventsource.h  main.cpp  map.cpp  map.h  mapentry.cpp  mapentry.h  sourcedevice.cpp  sourcedevice.h  targetdevice.cpp  targetdevice.h  utils.cpp  utils.h
src/tools/: CMakeLists.txt
src/tools/gen_input/: CMakeLists.txt  main.cpp
